# hot_book_sys

./: pyproject.toml
backend/: db.sqlite3  manage.py  pyproject.toml
backend/hot_book_sys/: schema.py  settings.py  urls.py
backend/hot_book_sys/api/: apps.py  urls.py  views.py
backend/hot_book_sys/hotel/: admin.py  apps.py  models.py  resolvers.py  schema.py  types.py  views.py
backend/hot_book_sys/hotel/migrations/: 0001_initial.py  0002_rename_num_reviews_hotel_review_number_and_more.py  0003_rename_num_guests_booking_guest_number.py  0004_booking_guest.py
frontend/: apollo-client.ts  package-lock.json  package.json
frontend/pages/: _app.tsx  index.tsx
hot_book_sys/: asgi.py  settings.py  wsgi.py
