[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Oliver Megan <oliver.megan123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
strawberry-graphql-django = "^0.33.0"
django = "^5.0.3"
django-choices-field = "^2.2.2"
graphene-django = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
