[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Oliver Megan <oliver.megan123@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
django-choices-field = "^2.2.2"
graphene-django = "^3.2.0"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
